# readuct

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  conanfile.py
.conan_test_package/: conanfile.py
manual/: readuct_manual.tex  references.bib
src/: CMakeLists.txt
src/Readuct/: CMakeLists.txt  Files.cmake  config.cmake.in
src/Readuct/App/: io.h  main.cpp
src/Readuct/App/Tasks/: AFIROptimizationTask.h  AfirOptimizationTask.h  BSplineInterpolationTask.h  BondOrderTask.h  GeometryOptimizationTask.h  HessianTask.h  IRCTask.h  IntegralTask.h  IrcTask.h  NtOptimization2Task.h  NtOptimizationTask.h  SinglePointTask.h  TSOptimizationTask.h  Task.h  TaskFactory.h  TsOptimizationTask.h
src/Readuct/Python/: IoPython.cpp  PythonModule.cpp  SystemPython.cpp  TasksPython.cpp  __init__.py  pkginit.py  setup.py
src/Readuct/Python/sphinx/: conf.py.in  index.rst  python.rst
src/Readuct/Readuct/: ReaductModule.cpp  ReaductModule.h
src/Readuct/Readuct/ElementaryStepOptimization/: BSplineProfileCalculator.cpp  BSplineProfileCalculator.h  BinaryArrayIO.cpp  BinaryArrayIO.h  ElementaryStepOptimizer.h  ElementaryStepOptimizerSettings.h  EnergiesAndGradientsAlongSpline.h  MSVCCompatibility.h  PointSequence.h  ProfileEnergies.h  ReactionProfile.h  RecurringProfileCalculator.cpp  RecurringProfileCalculator.h  TypeConverter.cpp  TypeConverter.h
src/Readuct/Readuct/ElementaryStepOptimization/CostCalculators/: CommonTerms.cpp  CommonTerms.h  CostCalculatorEditor.h  CostCombiner.h  CostCombinerEditor.h  ElasticPath.cpp  ElasticPath.h  ElasticPathEditor.cpp  ElasticPathEditor.h  Energy.cpp  Energy.h  EnergyEditor.cpp  EnergyEditor.h  IntegratingCostCalculator.cpp  IntegratingCostCalculator.h  ReactionPathCostCalculator.h  ReaductDefault.cpp  ReaductDefault.h
src/Readuct/Tests/AppTests/: br.xyz  br_2.xyz  br_2_alternative.xyz  end.xyz  end2.xyz  h2_1.xyz  h2_2.xyz  h2_3.xyz  h2o2.xyz  h2o2_ts.xyz  qmmm.ts_guess.xyz  sn2_start.xyz  start.xyz  start2.xyz  test_readuct.py
src/Readuct/Tests/BSplines/: BSplineCorrectnessTest.cpp  BSplineIOTest.cpp  BSplineKnotInserterTest.cpp  BSplineMergerTest.cpp  BSplineRootFinderTest.cpp  BSplineSegmenterTest.cpp  BSplineSplitterTest.cpp  BSplineStationaryPointFinderTest.cpp  BSplineTest.cpp  BSplineToolsTest.cpp  ControlPointDerivativesTest.cpp  DimensionManipulatorTest.cpp  FixedKnotSplineGeneratorTest.cpp  GeometricManipulationsTest.cpp
src/Readuct/Tests/ElementaryStepOptimization/: CommonTermsTest.cpp
src/Readuct/Tests/TransitionStateSearch/: CommonTermsTest.cpp
